-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: Impala 2.10.0
-
Fix Version/s: Impala 3.0
-
Labels:
-
Target Version:
-
Epic Color:ghx-label-2
At the next compatibility breaking version we should revisit the output types of round() functions. In order to match the behavior of most of other database systems, the output type of the round() functions should be the same as the input type.
For example, today, round(double) returns a bigint. We should return a double instead.
- is related to
-
IMPALA-7613 Support round(DECIMAL) with non-constant second argument
-
- In Progress
-
- supercedes
-
IMPALA-3436 Round(double, int) should return decimal
-
- Closed
-
There are no Sub-Tasks for this issue.