be/src/exprs/expr-test.cc
@@ -5224,12 +5224,12 @@ TEST_F(ExprTest, MathFunctions) {
   TestValue("abs(-9223372036854775807)", TYPE_BIGINT,  9223372036854775807);
   TestValue("abs(9223372036854775807)", TYPE_BIGINT,  9223372036854775807);
   TestIsNull("abs(-9223372036854775808)", TYPE_BIGINT);
-  TestValue("sign(0.0)", TYPE_FLOAT, 0.0f);
-  TestValue("sign(-0.0)", TYPE_FLOAT, 0.0f);
-  TestValue("sign(+0.0)", TYPE_FLOAT, 0.0f);
-  TestValue("sign(10.0)", TYPE_FLOAT, 1.0f);
-  TestValue("sign(-10.0)", TYPE_FLOAT, -1.0f);
-  TestIsNull("sign(NULL)", TYPE_FLOAT);
+  TestValue("sign(0.0)", TYPE_DOUBLE, 0.0f);
+  TestValue("sign(-0.0)", TYPE_DOUBLE, 0.0f);
+  TestValue("sign(+0.0)", TYPE_DOUBLE, 0.0f);
+  TestValue("sign(10.0)", TYPE_DOUBLE, 1.0f);
+  TestValue("sign(-10.0)", TYPE_DOUBLE, -1.0f);
+  TestIsNull("sign(NULL)", TYPE_DOUBLE);
 
   // It is important to calculate the expected values
   // using math functions, and not simply use constants.
@@ -5493,7 +5493,7 @@ TEST_F(ExprTest, MathFunctions) {
   // NULL arguments. In some cases the NULL can match multiple overloads so the result
   // type depends on the order in which function overloads are considered.
   TestIsNull("abs(NULL)", TYPE_SMALLINT);
-  TestIsNull("sign(NULL)", TYPE_FLOAT);
+  TestIsNull("sign(NULL)", TYPE_DOUBLE);
   TestIsNull("exp(NULL)", TYPE_DOUBLE);
   TestIsNull("ln(NULL)", TYPE_DOUBLE);
   TestIsNull("log10(NULL)", TYPE_DOUBLE);
@@ -5546,25 +5546,25 @@ TEST_F(ExprTest, MathFunctions) {
 }
 
 TEST_F(ExprTest, MathRoundingFunctions) {
-  TestValue("ceil(cast(0.1 as double))", TYPE_BIGINT, 1);
-  TestValue("ceil(cast(-10.05 as double))", TYPE_BIGINT, -10);
-  TestValue("ceil(cast(23.6 as double))", TYPE_BIGINT, 24);
-  TestValue("ceiling(cast(0.1 as double))", TYPE_BIGINT, 1);
-  TestValue("ceiling(cast(-10.05 as double))", TYPE_BIGINT, -10);
-  TestValue("floor(cast(0.1 as double))", TYPE_BIGINT, 0);
-  TestValue("floor(cast(-10.007 as double))", TYPE_BIGINT, -11);
-  TestValue("dfloor(cast(123.456 as double))", TYPE_BIGINT, 123);
-  TestValue("truncate(cast(0.1 as double))", TYPE_BIGINT, 0);
-  TestValue("truncate(cast(-10.007 as double))", TYPE_BIGINT, -10);
-  TestValue("dtrunc(cast(10.99 as double))", TYPE_BIGINT, 10);
+  TestValue("ceil(cast(0.1 as double))", TYPE_DOUBLE, 1);
+  TestValue("ceil(cast(-10.05 as double))", TYPE_DOUBLE, -10);
+  TestValue("ceil(cast(23.6 as double))", TYPE_DOUBLE, 24);
+  TestValue("ceiling(cast(0.1 as double))", TYPE_DOUBLE, 1);
+  TestValue("ceiling(cast(-10.05 as double))", TYPE_DOUBLE, -10);
+  TestValue("floor(cast(0.1 as double))", TYPE_DOUBLE, 0);
+  TestValue("floor(cast(-10.007 as double))", TYPE_DOUBLE, -11);
+  TestValue("dfloor(cast(123.456 as double))", TYPE_DOUBLE, 123);
+  TestValue("truncate(cast(0.1 as double))", TYPE_DOUBLE, 0);
+  TestValue("truncate(cast(-10.007 as double))", TYPE_DOUBLE, -10);
+  TestValue("dtrunc(cast(10.99 as double))", TYPE_DOUBLE, 10);
 
-  TestValue("round(cast(1.499999 as double))", TYPE_BIGINT, 1);
-  TestValue("round(cast(1.5 as double))", TYPE_BIGINT, 2);
-  TestValue("round(cast(1.500001 as double))", TYPE_BIGINT, 2);
-  TestValue("round(cast(-1.499999 as double))", TYPE_BIGINT, -1);
-  TestValue("round(cast(-1.5 as double))", TYPE_BIGINT, -2);
-  TestValue("round(cast(-1.500001 as double))", TYPE_BIGINT, -2);
-  TestValue("dround(cast(2.500001 as double))", TYPE_BIGINT, 3);
+  TestValue("round(cast(1.499999 as double))", TYPE_DOUBLE, 1);
+  TestValue("round(cast(1.5 as double))", TYPE_DOUBLE, 2);
+  TestValue("round(cast(1.500001 as double))", TYPE_DOUBLE, 2);
+  TestValue("round(cast(-1.499999 as double))", TYPE_DOUBLE, -1);
+  TestValue("round(cast(-1.5 as double))", TYPE_DOUBLE, -2);
+  TestValue("round(cast(-1.500001 as double))", TYPE_DOUBLE, -2);
+  TestValue("dround(cast(2.500001 as double))", TYPE_DOUBLE, 3);
 
   TestValue("round(cast(3.14159265 as double), 0)", TYPE_DOUBLE, 3.0);
   TestValue("round(cast(3.14159265 as double), 1)", TYPE_DOUBLE, 3.1);
@@ -5578,14 +5578,24 @@ TEST_F(ExprTest, MathRoundingFunctions) {
   TestValue("round(cast(-3.14159265 as double), 3)", TYPE_DOUBLE, -3.142);
   TestValue("round(cast(-3.14159265 as double), 4)", TYPE_DOUBLE, -3.1416);
   TestValue("round(cast(-3.14159265 as double), 5)", TYPE_DOUBLE, -3.14159);
+  TestValue("round(cast(3.1415926535897932384626433 as double), 19)",
+      TYPE_DOUBLE, 3.141592653589793);
+  TestValue("round(cast(3.1415926535897932384626433 as double), 20)",
+      TYPE_DOUBLE, 3.141592653589794);
   TestValue("dround(cast(3.14159265 as double), 5)", TYPE_DOUBLE, 3.14159);
+  TestValue("round(cast(5.55 as double), 1)", TYPE_DOUBLE, 5.6);
+  TestValue("round(cast(-5.55 as double), 1)", TYPE_DOUBLE, -5.6);
+  TestValue("round(cast(555.555 as double), -1)", TYPE_DOUBLE, 560);
+  TestValue("round(cast(-555.555 as double), -1)", TYPE_DOUBLE, -560);
+  TestValue("round(cast(555.555 as double), -2)", TYPE_DOUBLE, 600);
+  TestValue("round(cast(-555.555 as double), -2)", TYPE_DOUBLE, -600);
 
   // NULL arguments.
-  TestIsNull("ceil(cast(NULL as double))", TYPE_BIGINT);
-  TestIsNull("ceiling(cast(NULL as double))", TYPE_BIGINT);
-  TestIsNull("floor(cast(NULL as double))", TYPE_BIGINT);
-  TestIsNull("truncate(cast(NULL as double))", TYPE_BIGINT);
-  TestIsNull("round(cast(NULL as double))", TYPE_BIGINT);
+  TestIsNull("ceil(cast(NULL as double))", TYPE_DOUBLE);
+  TestIsNull("ceiling(cast(NULL as double))", TYPE_DOUBLE);
+  TestIsNull("floor(cast(NULL as double))", TYPE_DOUBLE);
+  TestIsNull("truncate(cast(NULL as double))", TYPE_DOUBLE);
+  TestIsNull("round(cast(NULL as double))", TYPE_DOUBLE);
   TestIsNull("round(cast(NULL as double), 1)", TYPE_DOUBLE);
   TestIsNull("round(cast(3.14159265 as double), NULL)", TYPE_DOUBLE);
   TestIsNull("round(cast(NULL as double), NULL)", TYPE_DOUBLE);
